# hsd-data

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SPECIFICATION.md  TODO.md  fpm.toml
.github/workflows/: docs.yml  lint.yml  tests.yml
app/: CMakeLists.txt  hsd_convert.f90
cmake/: hsd-data-config.cmake.in
docs/: api.md  cli.md  conf.py  format_mapping.md  index.rst  installation.md  user_guide.md
docs/_build/html/: .buildinfo  api.html  cli.html  format_mapping.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  user_guide.html
docs/_build/html/.doctrees/: api.doctree  cli.doctree  environment.pickle  format_mapping.doctree  index.doctree  installation.doctree  user_guide.doctree
src/: CMakeLists.txt  hsd_data.f90  hsd_data_common.f90
src/backends/: hsd_data_hdf5.f90  hsd_data_hsd.f90  hsd_data_json_parser.f90  hsd_data_json_writer.f90  hsd_data_toml.f90  hsd_data_xml_parser.f90  hsd_data_xml_writer.f90  hsd_data_yaml_parser.f90  hsd_data_yaml_writer.f90
src/utils/: hsd_data_json_escape.f90  hsd_data_xml_escape.f90
test/: CMakeLists.txt  build_env.f90.in  check_compact.cmake  testapp.f90
test/fixtures/: arrays.hsd  arrays.json  arrays.toml  arrays.xml  arrays.yaml  attributes.hsd  attributes.json  attributes.toml  attributes.xml  attributes.yaml  complex_values.hsd  complex_values.json  complex_values.toml  complex_values.xml  complex_values.yaml  large.json  matrix.hsd  matrix.json  matrix.toml  matrix.xml  matrix.yaml  nested.hsd  nested.json  nested.toml  nested.xml  nested.yaml  simple.hsd  simple.json  simple.toml  simple.xml  simple.yaml  special_chars.hsd  special_chars.json  special_chars.toml  special_chars.xml  special_chars.yaml  unicode.hsd  unicode.json  unicode.toml  unicode.xml  (+1 more)
test/suites/: test_common_suite.f90  test_cross_format_suite.f90  test_edge_cases_suite.f90  test_hdf5_suite.f90  test_hsd_backend_suite.f90  test_json_suite.f90  test_toml_suite.f90  test_xml_parser_suite.f90  test_xml_roundtrip_suite.f90  test_xml_writer_suite.f90  test_yaml_suite.f90
